# GhostHouseBot

./: .env.sample  .gitignore  main.py  pyproject.toml  ruff.toml
cog/: bot_cog.py  convenience.py  dispander.py  music_cog.py  slash.py
cog/util/: DbModule.py  thread_webhook.py  tts.py
